Progress on chart

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     fill: steelblue;
   }
 
-  .x.axis path {
-    display: none;
+  .w-group {
+    fill: none;
+    stroke-width: 1px;
   }
 
   form {
@@ -40,19 +41,40 @@
 var DEFAULT_Fy = 50; // ksi
 var DEFAULT_E = 29000; // ksi
 var DEFAULT_Cb = 1; //
+var MAX_UNBRACED = 50; // ft
+var UNBRACED_STEP = 1; // ft
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom - 10;
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+var x0 = d3.scale.linear()
+    .range([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x0)
+    .orient('bottom');
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient('left');
+    // .tickFormat(d3.format('.2s'));
+
+var line = d3.svg.line()
+    .x(function(d){ return x0(d.length);})
+    .y(function(d){ return y(d.Mn);});
+
+var svg = d3.select('body').append('svg')
+    .attr('width', width + margin.left + margin.right)
+    .attr('height', height + margin.top + margin.bottom)
+  .append('g')
+    .attr('transform', 'translate(' + margin.left + ',' + margin.top + ')');
 
 var globalData = [];
-d3.csv("data.csv", function(error, data) {
+d3.csv('data.csv', function(error, data) {
   if (error) throw error;
 
   var beams = d3.nest()
@@ -65,9 +87,9 @@ d3.csv("data.csv", function(error, data) {
   console.log(W_BEAMS[8].values[14].AISC_Manual_Label);
   console.log(W_BEAMS[8].values[14].Mp / 12 * 0.9); // k-ft
   console.log('Lb', W_BEAMS[8].values[14].Lp, W_BEAMS[8].values[14].Lr);
-  console.log('Mn at 16\': ', 0.9*W_BEAMS[8].values[14].MnFunction(16)/12);
+  console.log('Mn at 16\': ', 0.9*W_BEAMS[8].values[14].MnFunction(10)/12);
 
-  // countType = d3.keys(data[0]).filter(function(key) { return key !== "Engineer"; });
+  // countType = d3.keys(data[0]).filter(function(key) { return key !== 'Engineer'; });
   // data.forEach(function(d) {
   //   d.counts = countType.map(function(name) { return {name: name, value: +d[name]}; });
   // })
@@ -76,66 +98,59 @@ d3.csv("data.csv", function(error, data) {
   //   return +b[sortType] - +a[sortType];
   // })
 
-  // x0.domain(data.map(function(d) { return d.Engineer; }));
-  // x1.domain(countType).rangeRoundBands([0, x0.rangeBand()]);
-  // y.domain([0, d3.max(data, function(d) { return d3.max(d.counts, function(d) { return d.value; }); })]);
+  x0.domain([0, MAX_UNBRACED]);
+  y.domain([0, 160000]);
 
-  // svg.append("g")
-  //     .attr("class", "x axis")
-  //     .attr("transform", "translate(0," + height + ")")
-  //     .call(xAxis);
+  svg.append('g')
+      .attr('class', 'x axis')
+      .attr('transform', 'translate(0,' + height + ')')
+      .call(xAxis)
+    .append('text')
+      .attr('x', width)
+      .style('text-anchor', 'end')
+      .text('Unbraced Length');
 
-  // svg.append("g")
-  //     .attr("class", "y axis")
-  //     .call(yAxis)
-  //   .append("text")
-  //     .attr("transform", "rotate(-90)")
-  //     .attr("y", 6)
-  //     .attr("dy", ".71em")
-  //     .style("text-anchor", "end")
-  //     .text("Count");
+  svg.append('g')
+      .attr('class', 'y axis')
+      .call(yAxis)
+    .append('text')
+      .attr('transform', 'rotate(-90)')
+      .attr('y', 6)
+      .attr('dy', '.71em')
+      .style('text-anchor', 'end')
+      .text('Available Moment');
 
-  // var engineer = svg.selectAll(".engineer")
-  //     .data(data)
-  //   .enter().append("g")
-  //     .attr("class", "g engineer")
-  //     .attr("transform", function(d) { return "translate(" + x0(d.Engineer) + ",0)"; });
+  var engineer = svg.selectAll('.w-group')
+      .data(W_BEAMS)
+    .enter().append('g')
+      .attr('class', 'g w-group')
+      .attr('stroke', function(){return '#'+Math.floor(Math.random()*16777215).toString(16);})
+      // .attr('transform', function(d) { return 'translate(' + x0(d.Engineer) + ',0)'; });
 
-  // engineer.selectAll("rect")
-  //     .data(function(d) { return d.counts; })
-  //   .enter().append("rect")
-  //     .attr("width", x1.rangeBand())
-  //     .attr("height", 0)
-  //     .attr("x", function(d) { return x1(d.name); })
-  //     .attr("y", function(d) { return y(0); })
-  //     .style("fill", function(d) { return color(d.name); })
-  //     .style("opacity", function(d) {
+  engineer.selectAll('path')
+      .data(function(d) { return d.values; })
+    .enter().append('path')
+      .attr('d', function(d, i){
+        if (i > 1){
+          return
+        }
+        var XY = d3.range(0, MAX_UNBRACED, UNBRACED_STEP).map(function(length){
+          return {
+            length: length,
+            Mn: d.MnFunction(length)
+          }
+        })
+        return line(XY);
+      })
+  //     .attr('width', x1.rangeBand())
+  //     .attr('height', function(d) { return height - y(d.value); })
+  //     .attr('x', function(d) { return x1(d.name); })
+  //     .attr('y', function(d) { return y(d.value); })
+  //     .style('fill', function(d) { return color(d.name); })
+  //     .style('opacity', function(d) {
   //       if (d.name === sortType) return 1;
   //       return 0.15;
   //     })
-  //     .transition().duration(1000)
-  //     .attr("height", function(d) { return height - y(d.value); })
-  //     .attr("y", function(d) { return y(d.value); })
-
-  // var legend = svg.selectAll(".legend")
-  //     .data(countType.slice().reverse())
-  //   .enter().append("g")
-  //     .attr("class", "legend")
-  //     .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-
-  // legend.append("rect")
-  //     .attr("x", width - 18)
-  //     .attr("width", 18)
-  //     .attr("height", 18)
-  //     .style("fill", color);
-
-  // legend.append("text")
-  //     .attr("x", width - 24)
-  //     .attr("y", 9)
-  //     .attr("dy", ".35em")
-  //     .style("text-anchor", "end")
-  //     .text(function(d) { return d; });
-
 });
 
 function getWSections (data){
@@ -155,17 +170,15 @@ function calculateProperties (beamGroup){
     // Returns Mn
     // Lb expected in feet
     bm.MnFunction = function(Lb){
-      var Frc = (DEFAULT_Cb * Math.pow(Math.PI, 2) * DEFAULT_E / Math.pow(Lb/+bm.rts, 2)) // kip-in. [AISC 16.1-47 (F2-4)]
+      var Fcr = (DEFAULT_Cb * Math.pow(Math.PI, 2) * DEFAULT_E / Math.pow(Lb/+bm.rts, 2)) // kip-in. [AISC 16.1-47 (F2-4)]
                 * Math.sqrt(1 + 0.078 * +bm.J * c / (+bm.Sx * +bm.ho) * Math.pow(Lb/+bm.rts, 2));
       if (Lb <= bm.Lp){
         return bm.Mp;
       } else if (bm.Lp < Lb && Lb <= bm.Lr){
-        console.log('case 2');
         return Math.min(bm.Mp,
           DEFAULT_Cb * (bm.Mp - (bm.Mp - 0.7 * DEFAULT_Fy * +bm.Sx) * (Lb - bm.Lp)/(bm.Lr - bm.Lp))
         );
       } else {
-        console.log('case 3');
         return Math.min(bm.Mp, Fcr * +bm.Sx);
       }
     }
