--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 var DEFAULT_Fy = 50; // ksi
 var DEFAULT_E = 29000; // ksi
 var DEFAULT_Cb = 1; //
-var MAX_UNBRACED = 50; // ft
+var MAX_UNBRACED = 100; // ft
 var UNBRACED_STEP = 1; // ft
 
-var margin = {top: 20, right: 20, bottom: 30, left: 40},
+var margin = {top: 20, right: 20, bottom: 30, left: 50},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom - 10;
 
@@ -84,11 +84,6 @@ d3.csv('data.csv', function(error, data) {
   var W_BEAMS = beams.filter(getWSections)
   W_BEAMS.forEach(calculateProperties)
 
-  console.log(W_BEAMS[8].values[14].AISC_Manual_Label);
-  console.log(W_BEAMS[8].values[14].Mp / 12 * 0.9); // k-ft
-  console.log('Lb', W_BEAMS[8].values[14].Lp, W_BEAMS[8].values[14].Lr);
-  console.log('Mn at 16\': ', 0.9*W_BEAMS[8].values[14].MnFunction(10)/12);
-
   // countType = d3.keys(data[0]).filter(function(key) { return key !== 'Engineer'; });
   // data.forEach(function(d) {
   //   d.counts = countType.map(function(name) { return {name: name, value: +d[name]}; });
@@ -99,7 +94,7 @@ d3.csv('data.csv', function(error, data) {
   // })
 
   x0.domain([0, MAX_UNBRACED]);
-  y.domain([0, 160000]);
+  y.domain([0, 150000]);
 
   svg.append('g')
       .attr('class', 'x axis')
@@ -118,7 +113,7 @@ d3.csv('data.csv', function(error, data) {
       .attr('y', 6)
       .attr('dy', '.71em')
       .style('text-anchor', 'end')
-      .text('Available Moment');
+      .text('Available Moment (k-in)');
 
   var engineer = svg.selectAll('.w-group')
       .data(W_BEAMS)
@@ -131,26 +126,14 @@ d3.csv('data.csv', function(error, data) {
       .data(function(d) { return d.values; })
     .enter().append('path')
       .attr('d', function(d, i){
-        if (i > 1){
-          return
-        }
+        // if (d.AISC_Manual_Label !== 'W21X68'){
+          // return
+        // }
         var XY = d3.range(0, MAX_UNBRACED, UNBRACED_STEP).map(function(length){
-          return {
-            length: length,
-            Mn: d.MnFunction(length)
-          }
+          return { length: length, Mn: d.MnFunction(length) }
         })
         return line(XY);
       })
-  //     .attr('width', x1.rangeBand())
-  //     .attr('height', function(d) { return height - y(d.value); })
-  //     .attr('x', function(d) { return x1(d.name); })
-  //     .attr('y', function(d) { return y(d.value); })
-  //     .style('fill', function(d) { return color(d.name); })
-  //     .style('opacity', function(d) {
-  //       if (d.name === sortType) return 1;
-  //       return 0.15;
-  //     })
 });
 
 function getWSections (data){
@@ -170,8 +153,6 @@ function calculateProperties (beamGroup){
     // Returns Mn
     // Lb expected in feet
     bm.MnFunction = function(Lb){
-      var Fcr = (DEFAULT_Cb * Math.pow(Math.PI, 2) * DEFAULT_E / Math.pow(Lb/+bm.rts, 2)) // kip-in. [AISC 16.1-47 (F2-4)]
-                * Math.sqrt(1 + 0.078 * +bm.J * c / (+bm.Sx * +bm.ho) * Math.pow(Lb/+bm.rts, 2));
       if (Lb <= bm.Lp){
         return bm.Mp;
       } else if (bm.Lp < Lb && Lb <= bm.Lr){
@@ -179,6 +160,8 @@ function calculateProperties (beamGroup){
           DEFAULT_Cb * (bm.Mp - (bm.Mp - 0.7 * DEFAULT_Fy * +bm.Sx) * (Lb - bm.Lp)/(bm.Lr - bm.Lp))
         );
       } else {
+      var Fcr = (DEFAULT_Cb * Math.pow(Math.PI, 2) * DEFAULT_E / Math.pow(Lb*12/+bm.rts, 2)) // kip-in. [AISC 16.1-47 (F2-4)]
+                * Math.sqrt(1 + 0.078 * +bm.J * c / (+bm.Sx * +bm.ho) * Math.pow(Lb*12/+bm.rts, 2));
         return Math.min(bm.Mp, Fcr * +bm.Sx);
       }
     }
