--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <style>
   body {
     font: 10px sans-serif;
-    margin: auto;
-    position: relative;
-    width: 1280px;
   }
+
+  #left-column,
+  #right-column {
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  #left-column {
+    width: 25%;
+  }
+
+  #right-column {
+    width: 70%;
+  }
+
 
   text {
     font: 10px sans-serif;
@@ -34,223 +46,19 @@
   }
 
 </style>
-  <input type="number" id="length-input" onkeyup="updateLength()" onmousedown="updateLength()" onmouseup="updateLength()" max="1000" placeholder="Unbraced beam length (ft)">
-  <input type="number" id="weight-input" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" max="1000" min="9" placeholder="Max beam weight (plf)">
+  <div id="left-column">
+    <div>
+      Length: <input type="number" id="length-input" onkeyup="updateLength()" onmousedown="updateLength()" onmouseup="updateLength()" max="1000" placeholder="Unbraced beam length (ft)">
+    </div>
+    <div>
+      Weight: <input type="number" id="weight-input" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" max="1000" min="9" placeholder="Max beam weight (plf)">
+    </div>
+  </div>
+  <div id="right-column">
+    <div id="row-1"></div>
+    <div id="row-2"></div>
+  </div>
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
-<script>
-
-var DEFAULT_Fy = 50; // ksi
-var DEFAULT_E = 29000; // ksi
-var DEFAULT_Cb = 1; //
-var MAX_UNBRACED = 81; // ft
-var UNBRACED_STEP = 1; // ft
-
-// User inputs
-var START_LENGTH = null;
-var USER_WEIGHT = null;
-
-var margin = {top: 20, right: 20, bottom: 30, left: 50},
-    width = 1280 - margin.left - margin.right,
-    height = window.innerHeight - margin.top - margin.bottom - 10;
-
-var x0 = d3.scale.linear()
-    .range([0, width], .1);
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var xAxis = d3.svg.axis()
-    .scale(x0)
-    .orient('bottom');
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient('left');
-
-var line = d3.svg.line()
-    .x(function(d){ return x0(d.length);})
-    .y(function(d){ return y(d.Mn);});
-
-var svg = d3.select('body').append('svg')
-    .attr('width', width + margin.left + margin.right)
-    .attr('height', height + margin.top + margin.bottom)
-  .append('g')
-    .attr('transform', 'translate(' + margin.left + ',' + margin.top + ')');
-
-var W_BEAMS = [];
-d3.csv('data.csv', function(error, data) {
-  if (error) throw error;
-
-  var beams = d3.nest()
-    .key(function(d){ return d.AISC_Manual_Label.split('X')[0]; })
-    .entries(data)
-
-  W_BEAMS = beams.filter(getWSections);
-  W_BEAMS.forEach(calculateProperties);
-
-  var special = calculateSpecialProperties(W_BEAMS, {});
-  x0.domain([0, MAX_UNBRACED]);
-  y.domain([0, special.yBound]);
-
-  svg.append('g')
-      .attr('class', 'x axis')
-      .attr('transform', 'translate(0,' + height + ')')
-      .call(xAxis)
-    .append('text')
-      .attr('x', width)
-      .style('text-anchor', 'end')
-      .text('Unbraced Length');
-
-  svg.append('g')
-      .attr('class', 'y axis')
-      .call(yAxis)
-    .append('text')
-      .attr('transform', 'rotate(-90)')
-      .attr('y', 6)
-      .attr('dy', '.71em')
-      .style('text-anchor', 'end')
-      .text('Available Moment (k-ft) - Phi not yet applied');
-
-  var wGroup = svg.selectAll('.w-group')
-      .data(W_BEAMS)
-    .enter().append('g')
-      .attr('class', function(d){ return 'g w-group ' + d.key;})
-
-  wGroup.selectAll('path')
-      .data(function(d) { return d.values; })
-    .enter().append('path')
-      .attr('d', function(d){ return line(d.MnValues); })
-      .attr('opacity', 0.15);
-});
-
-function updateLength() {
-  userLength = +document.getElementById('length-input').value;
-  if (START_LENGTH === (userLength - 10)) return;
-  START_LENGTH = Math.max(0, userLength - 10);
-  endLength = (userLength === 0) ? MAX_UNBRACED : Math.min(MAX_UNBRACED, userLength + 10);
-
-  x0.domain([START_LENGTH, endLength]);
-  var special = calculateSpecialProperties(W_BEAMS, {});
-  y.domain([0, special.yBound]);
-
-  d3.selectAll('.x.axis')
-    .transition().duration(2000)
-    .call(xAxis);
-
-  d3.selectAll('.y.axis')
-    .transition().duration(2000)
-    .call(yAxis);
-
-  line = d3.svg.line()
-    .x(function(d){ return x0(d.length);})
-    .y(function(d){ return y(d.Mn);});
-
-  var wGroup = d3.selectAll('.w-group')
-      .data(W_BEAMS)
-
-  wGroup.selectAll('path')
-      .data(function(d) { return d.values; })
-      .transition().duration(2000)
-      .attr('d', function(d){ return line(d.MnValues); });
-}
-
-function updateWeight() {
-  if (USER_WEIGHT === +document.getElementById('weight-input').value) return;
-  USER_WEIGHT = +document.getElementById('weight-input').value;
-  var special = calculateSpecialProperties(W_BEAMS, {});
-  y.domain([0, special.yBound]);
-
-  d3.selectAll('.y.axis')
-    .transition().duration(2000).delay(1000)
-    .call(yAxis);
-
-  line = d3.svg.line()
-    .x(function(d){ return x0(d.length);})
-    .y(function(d){ return y(d.Mn);});
-
-  var wGroup = d3.selectAll('.w-group')
-      .data(W_BEAMS)
-
-  wGroup.selectAll('path')
-      .data(function(d) { return d.values; })
-      .transition().duration(1000)
-      .attr('opacity', filterBeams)
-      .attr('stroke', function(d){
-        if (USER_WEIGHT && +d.W <= USER_WEIGHT) return '#00A1DC';
-      })
-
-  wGroup.selectAll('path')
-      .data(function(d) { return d.values; })
-      .transition().duration(2000).delay(1000)
-      .attr('d', function(d){ return line(d.MnValues); })
-      .attr('stroke-width', function(d){
-        if (USER_WEIGHT && +d.W <= USER_WEIGHT) return 1.25;
-      });
-}
-
-function getWSections (data){
-  return (data.key.slice(0,1) === 'W') && (data.key.slice(0,2) !== 'WT');
-}
-
-function filterBeams (d){
-  if (USER_WEIGHT){
-    if (+d.W <= USER_WEIGHT) return 0.4;
-    return 0.07;
-  }
-  return 0.1;
-}
-
-function calculateProperties (beamGroup){
-  beamGroup.values.forEach(function(bm){
-    bm.Mp = DEFAULT_Fy * +bm.Zx; // kip-in
-    bm.Lp = 1.76 * +bm.ry * Math.sqrt(DEFAULT_E / DEFAULT_Fy) / 12; // ft. [AISC 16.1-48 (F2-5)]
-    var c = 1;                                                 // [AISC 16.1-48 (F2-8a)]
-    bm.Lr = 1.95 * +bm.rts * (DEFAULT_E / (0.7 * DEFAULT_Fy))  // ft. [AISC 16.1-48 (F2-6)]
-                  * Math.sqrt(+bm.J * c / (+bm.Sx * +bm.ho))
-                  * Math.sqrt(1 + Math.sqrt(1 + 6.76 * Math.pow(
-                    0.7 * DEFAULT_Fy * +bm.Sx * +bm.ho / (DEFAULT_E * +bm.J * c)
-                  , 2))) / 12;
-    // Returns Mn
-    // Lb expected in feet
-    bm.MnFunction = function(Lb){
-      if (Lb <= bm.Lp){
-        return bm.Mp;
-      } else if (bm.Lp < Lb && Lb <= bm.Lr){
-        return Math.min(bm.Mp,
-          DEFAULT_Cb * (bm.Mp - (bm.Mp - 0.7 * DEFAULT_Fy * +bm.Sx) * (Lb - bm.Lp)/(bm.Lr - bm.Lp))
-        );
-      } else {
-      var Fcr = (DEFAULT_Cb * Math.pow(Math.PI, 2) * DEFAULT_E / Math.pow(Lb*12/+bm.rts, 2)) // kip-in. [AISC 16.1-47 (F2-4)]
-                * Math.sqrt(1 + 0.078 * +bm.J * c / (+bm.Sx * +bm.ho) * Math.pow(Lb*12/+bm.rts, 2));
-        return Math.min(bm.Mp, Fcr * +bm.Sx);
-      }
-    }
-    bm.MnValues = d3.range(0, MAX_UNBRACED, UNBRACED_STEP).map(function(length){
-      return { length: length, Mn: bm.MnFunction(length)/12 }
-    })
-
-
-  })
-}
-
-function calculateSpecialProperties(beams, options){
-  var startLength = START_LENGTH || 0;
-  var maxWeight = !!USER_WEIGHT ? Math.max(9, USER_WEIGHT) : Infinity;
-  var special = beams.slice().reduce(function(pv, cv){
-    var groupMax = cv.values.reduce(function(pv, cv){
-      if (+cv.W > maxWeight){
-        return pv;
-      } else {
-        return Math.max(pv, cv.MnFunction(startLength));
-      }
-    }, 0);
-
-    pv.yMax = Math.max(pv.yMax, groupMax);
-    return pv;
-  }, {yMax: 0});
-  var roundingBuffer = special.yMax * 0.01;
-  special.yBound = Math.ceil(special.yMax / 12 / roundingBuffer) * roundingBuffer;
-  return special;
-}
-</script>
+<script src="./index.js"></script>
+<script src="./momentFunctions.js"></script>
