--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+  html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+  }
+
   body {
     font: 10px sans-serif;
+    margin: 0;
   }
 
   #left-column,
   #right-column {
-    display: inline-block;
+    float: left;
     vertical-align: top;
+    /*padding: 10px;*/
   }
 
   #left-column {
     width: 25%;
+    background: RGBA(124, 183, 160, 0.1);
   }
 
   #right-column {
-    width: 70%;
+    width: 75%;
+    background: RGBA(184, 103, 130, 0.05);
   }
 
 
@@ -48,17 +63,29 @@
 </style>
   <div id="left-column">
     <div>
-      Length: <input type="number" id="length-input" onkeyup="updateLength()" onmousedown="updateLength()" onmouseup="updateLength()" max="1000" placeholder="Unbraced beam length (ft)">
+      ASD/LRFD Toggle goes here
     </div>
     <div>
-      Weight: <input type="number" id="weight-input" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" max="1000" min="9" placeholder="Max beam weight (plf)">
+      Weight: <input type="number" id="weight-input" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" max="1000" min="9" placeholder="Max beam weight">
+      plf
+    </div>
+    <div>
+      Length: <input type="number" id="length-input" onkeyup="updateLength()" onmousedown="updateLength()" onmouseup="updateLength()" max="1000" placeholder="Unbraced beam length">
+      ft
+    </div>
+    <div>
+      Ix goes here
     </div>
   </div>
   <div id="right-column">
-    <div id="row-1"></div>
-    <div id="row-2"></div>
+    <div id="top-row"></div>
+    <div id="bottom-row">
+      <div id="bottom-left"></div>
+      <div id="bottom-right"></div>
+    </div>
   </div>
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="./index.js"></script>
-<script src="./momentFunctions.js"></script>
+<script src="./momentChart.js"></script>
+<script src="./weightChart.js"></script>
