--- a/index.html
+++ b/index.html
@@ -21,19 +21,27 @@
   #right-column {
     float: left;
     vertical-align: top;
-    /*padding: 10px;*/
+    border: 1px solid RGBA(184, 103, 130, 0.5);
   }
 
   #left-column {
-    width: 25%;
-    background: RGBA(124, 183, 160, 0.1);
+    width: 30%;
   }
 
   #right-column {
-    width: 75%;
-    background: RGBA(184, 103, 130, 0.05);
+    width: 70%;
   }
 
+  #top-row,
+  #bottom-row {
+    border: 1px solid RGBA(100, 100, 255, 0.5);
+  }
+
+  #bottom-right,
+  #bottom-left {
+    width: 50%;
+    border: 1px solid RGBA(255, 10, 25, 0.5);
+  }
 
   text {
     font: 10px sans-serif;
