Cleanup and filter by min weight

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
       ASD/LRFD Toggle goes here
     </div>
     <div>
-      Weight: <input type="number" id="weight-input" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" max="1000" min="9" placeholder="Max beam weight">
+      Weight: <input type="number" id="weight-min-input" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" max="900" min="9" placeholder="Max beam weight">
+      plf
+      <input type="number" id="weight-max-input" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" max="900" min="9" placeholder="Max beam weight">
       plf
     </div>
     <div>
