Add color scale

--- a/index.html
+++ b/index.html
@@ -133,5 +133,6 @@
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="./index.js"></script>
+<script src="./colorbrewer.min.js"></script>
 <script src="./iChart.js"></script>
 <script src="./momentChart.js"></script>
