Update I beam profile

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   }
 
   #left-column {
-    width: 20%;
+    width: 25%;
   }
 
   #right-column {
-    width: 80%;
+    width: 75%;
   }
 
   #top-container,
@@ -71,7 +71,7 @@
   .voronoi {
     fill: none;
     stroke: pink;
-    stroke-opacity: 0.1;
+    stroke-opacity: 0;
     pointer-events: all;
   }
 
@@ -92,9 +92,8 @@
   }
 
   .w-group.I {
-    fill: RGBA(200, 200, 200, .1);
+    fill: none;
     stroke-width: 1px;
-    stroke: RGBA(175, 100, 208, 1);
   }
 
   input {
